weka classifiers + doc to json

--- a/src/webapp-src/assets/css/custom.css
+++ b/src/webapp-src/assets/css/custom.css
@@ -29,6 +29,27 @@ body{
   // max-width: 1920px;
 }
 
+ .loading_background{
+    top: 0;
+    height: 100%;
+    width: 100%;
+    left: 0px;
+    position: absolute;
+background: white;
+    z-index: 10005;
+
+ }
+
+.loading_background i{
+
+font-size: 40px;
+height: 30px;
+margin: auto;
+position: absolute;
+top: 0; left: 0; bottom: 0; right: 0;
+opacity: 0.6;
+}
+
 
  #container{
  height:100%;
