js dependencies update + some css

--- a/src/webapp-src/assets/css/custom.css
+++ b/src/webapp-src/assets/css/custom.css
@@ -234,6 +234,14 @@ z-index:2;
  padding-bottom: 30px;
 }
 
+.card-block{
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+
+  }  
 
 .custom_card .card-block{
     transition-property: font-size;
