Project Info + add buttons

--- a/src/webapp-src/assets/css/custom.css
+++ b/src/webapp-src/assets/css/custom.css
@@ -12,6 +12,13 @@ body{
   overflow-x:hidden;
 }
 
+h4{
+  margin-bottom: 15px !important;
+}
+
+.container-fluid {
+   padding: 0px;
+}
 
 #main-region{
   min-height: 75vh;
