Update of routes: create, update, delete, add book

--- a/src/webapp-src/assets/css/custom.css
+++ b/src/webapp-src/assets/css/custom.css
@@ -42,7 +42,7 @@ h4{
     width: 100%;
     left: 0px;
     position: absolute;
-background: white;
+    background: white;
     z-index: 10005;
 
  }
@@ -101,6 +101,12 @@ opacity: 0.6;
 }
 
 
+.table_row_button{
+    padding: 3px;
+    padding-left: 9px;
+    padding-right: 9px;
+    font-size: 12px;
+}
 
 .defaulthl{
  
